--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
 }
 
 android {
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -41,6 +46,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 
     /** Room Database */
     def room_version = "2.3.0"
@@ -63,6 +69,8 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
 
     testImplementation 'junit:junit:4.+'
