--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 
+    //GGoogle Play Services
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     // Room Database
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
