--- a/.github/workflows/mainWorkflow.yml
+++ b/.github/workflows/mainWorkflow.yml
@@ -24,5 +24,8 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+        
       - name: Build Project
         run: ./gradlew assemble
