--- a/.github/workflows/mainWorkflow.yml
+++ b/.github/workflows/mainWorkflow.yml
@@ -83,6 +83,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
 
       - name: Restore Cache
         uses: actions/cache@v2
