--- a/.github/workflows/mainWorkflow.yml
+++ b/.github/workflows/mainWorkflow.yml
@@ -1,4 +1,3 @@
-
 name: Weather Default Workflow
 on:
   push:
@@ -15,6 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+
       - name: Run ktlinCheck
         run: ./gradlew ktlintCheck
 
@@ -31,7 +36,7 @@ jobs:
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
-        
+
       - name: Restore Cache
         uses: actions/cache@v2
         with:
@@ -103,7 +108,7 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      
+
       - name: Restore Cache
         uses: actions/cache@v2
         with:
@@ -123,6 +128,6 @@ jobs:
         with:
           name: test-reports
           path: '**/build/reports/tests/'
-            
+
       - name: Build Project
         run: ./gradlew assemble
