--- a/.github/workflows/mainWorkflow.yml
+++ b/.github/workflows/mainWorkflow.yml
@@ -21,7 +21,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run ktlinCheck
-        run: ./gradlew ktlintCheck
+        run: ./gradlew ktlintFormat
 
   test_job:
     runs-on: ubuntu-latest
